venndb-usage/tests/fails/derive_enum.stderr
error: Only Structs with named fields are supported
 --> tests/fails/derive_enum.rs:4:1
  |
4 | / enum MyEnum {
5 | |     A,
6 | |     B,
7 | | }
  | |_^
